fix missing increment and channel in eas

--- a/eas.json
+++ b/eas.json
@@ -39,7 +39,10 @@
         "simulator": false
       }
     },
-    "production": {}
+    "production": {
+      "autoIncrement": true,
+      "channel": "production"
+    }
   },
   "submit": {
     "production": {}
