--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.27",
     "i18next": "^23.14.0",
     "intl-pluralrules": "^2.0.1",
     "mobx": "6.10.2",
