--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "submit:ios": "eas submit -p ios"
   },
   "dependencies": {
+    "@expo-google-fonts/jetbrains-mono": "^0.2.3",
     "@expo-google-fonts/space-grotesk": "^0.2.2",
     "@expo/metro-runtime": "~3.2.1",
     "@react-navigation/bottom-tabs": "^6.3.2",
