--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "expo-build-properties": "~0.13.1",
     "expo-dev-client": "~5.0.4",
     "expo-font": "~13.0.1",
+    "expo-gl": "~15.0.2",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
     "expo-splash-screen": "~0.29.13",
