--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.2",
+    "@react-three/fiber": "^8.17.10",
     "@shopify/flash-list": "1.7.1",
     "ai": "^4.0.9",
     "apisauce": "3.0.1",
@@ -74,6 +75,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.6",
+    "three": "^0.171.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
