--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "expo-build-properties": "~0.13.1",
     "expo-dev-client": "~5.0.4",
     "expo-font": "~13.0.1",
+    "expo-gl": "~15.0.2",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
     "expo-splash-screen": "~0.29.13",
@@ -73,6 +74,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.6",
+    "three": "^0.171.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -82,6 +84,7 @@
     "@testing-library/react-native": "^12.5.2",
     "@types/jest": "^29.2.1",
     "@types/react": "~18.3.12",
+    "@types/three": "^0.170.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.57.0",
     "eslint-config-expo": "~8.0.1",
