--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^4.1.0",
     "expo": "^52.0.0",
     "expo-application": "~6.0.1",
+    "expo-av": "~15.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-dev-client": "~5.0.4",
     "expo-font": "~13.0.1",
