--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bundle:visualize": "npx react-native-bundle-visualizer",
     "bundle:visualize:dev": "npx react-native-bundle-visualizer --dev",
     "build": "yarn build:ios:prod",
+    "build:local": "eas build --profile production --platform ios --local",
     "build:ios:sim": "eas build --profile development --platform ios --local",
     "build:ios:dev": "eas build --profile development:device --platform ios --local",
     "build:ios:prod": "eas build --profile production --platform ios",
