--- a/app.json
+++ b/app.json
@@ -34,7 +34,10 @@
         "image": "./assets/images/splash-logo-android-universal.png",
         "resizeMode": "contain",
         "backgroundColor": "#191015"
-      }
+      },
+      "permissions": [
+        "RECORD_AUDIO"
+      ]
     },
     "ios": {
       "icon": "./assets/images/app-icon-ios.png",
@@ -58,7 +61,13 @@
     },
     "plugins": [
       "expo-localization",
-      "expo-font"
+      "expo-font",
+      [
+        "expo-av",
+        {
+          "microphonePermission": "Allow Onyx to access your microphone for voice recording."
+        }
+      ]
     ],
     "experiments": {
       "tsconfigPaths": true
