--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "postinstall": "patch-package",
     "bundle:visualize": "npx react-native-bundle-visualizer",
     "bundle:visualize:dev": "npx react-native-bundle-visualizer --dev",
+    "build": "yarn build:ios:prod",
+    "build:local": "eas build --profile production --platform ios --local",
     "build:ios:sim": "eas build --profile development --platform ios --local",
     "build:ios:dev": "eas build --profile development:device --platform ios --local",
     "build:ios:prod": "eas build --profile production --platform ios",
@@ -47,6 +49,7 @@
     "date-fns": "^4.1.0",
     "expo": "^52.0.0",
     "expo-application": "~6.0.1",
+    "expo-av": "~15.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-dev-client": "~5.0.4",
     "expo-font": "~13.0.1",
