--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "expo-application": "~6.0.1",
     "expo-av": "~15.0.1",
     "expo-build-properties": "~0.13.1",
+    "expo-clipboard": "~7.0.0",
     "expo-dev-client": "~5.0.4",
     "expo-font": "~13.0.1",
     "expo-gl": "~15.0.2",
