--- a/package.json
+++ b/package.json
@@ -121,5 +121,12 @@
   },
   "engines": {
     "node": "^18.18.0 || >=20.0.0"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   }
 }
