--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@expo-google-fonts/jetbrains-mono": "0.2.3",
     "@expo-google-fonts/space-grotesk": "0.2.3",
     "@expo/metro-runtime": "~4.0.0",
+    "@noble/secp256k1": "^2.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "7.1.3",
     "@react-navigation/native": "7.0.13",
@@ -48,6 +49,8 @@
     "@shopify/flash-list": "1.7.1",
     "ai": "4.0.11",
     "apisauce": "3.0.1",
+    "bech32": "^2.0.0",
+    "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
     "buffer": "6.0.3",
     "date-fns": "^4.1.0",
