--- a/package.json
+++ b/package.json
@@ -33,33 +33,44 @@
     "prebuild:clean": "npx expo prebuild --clean",
     "submit:ios": "eas submit -p ios",
     "update:prod": "eas update --channel production --message",
-    "tsc": "tsc --noEmit"
+    "t": "tsc --noEmit",
+    "doctor": "npx expo-doctor"
   },
   "dependencies": {
-    "@ai-sdk/react": "^1.0.3",
-    "@expo-google-fonts/jetbrains-mono": "^0.2.3",
-    "@expo-google-fonts/space-grotesk": "^0.2.2",
+    "@ai-sdk/react": "1.0.4",
+    "@breeztech/react-native-breez-sdk-liquid": "0.5.1",
+    "@expo-google-fonts/jetbrains-mono": "0.2.3",
+    "@expo-google-fonts/space-grotesk": "0.2.3",
     "@expo/metro-runtime": "~4.0.0",
-    "@react-navigation/bottom-tabs": "^6.3.2",
-    "@react-navigation/native": "^6.0.2",
-    "@react-navigation/native-stack": "^6.0.2",
+    "@noble/curves": "^1.7.0",
+    "@noble/hashes": "^1.6.1",
+    "@noble/secp256k1": "^2.1.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "7.1.3",
+    "@react-navigation/native": "7.0.13",
+    "@react-navigation/native-stack": "7.1.14",
     "@shopify/flash-list": "1.7.1",
-    "ai": "^4.0.9",
+    "ai": "4.0.11",
     "apisauce": "3.0.1",
+    "bech32": "^2.0.0",
+    "bip32": "^5.0.0-rc.0",
+    "bip39": "3.1.0",
+    "buffer": "6.0.3",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.0",
+    "expo": "~52.0.14",
     "expo-application": "~6.0.1",
     "expo-av": "~15.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-clipboard": "~7.0.0",
-    "expo-dev-client": "~5.0.4",
+    "expo-crypto": "~14.0.1",
+    "expo-dev-client": "~5.0.5",
     "expo-font": "~13.0.1",
     "expo-gl": "~15.0.2",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.4",
+    "expo-system-ui": "~4.0.5",
     "expo-updates": "~0.26.9",
     "i18next": "^23.14.0",
     "intl-pluralrules": "^2.0.1",
@@ -79,6 +90,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.6",
     "three": "^0.171.0",
+    "tiny-secp256k1": "^2.2.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -116,5 +128,12 @@
   },
   "engines": {
     "node": "^18.18.0 || >=20.0.0"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
   }
 }
