--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@react-navigation/bottom-tabs": "7.1.3",
     "@react-navigation/native": "7.0.13",
     "@react-navigation/native-stack": "7.1.14",
+    "@scure/base": "^1.1.1",
     "@shopify/flash-list": "1.7.1",
     "ai": "4.0.11",
     "apisauce": "3.0.1",
@@ -77,6 +78,7 @@
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
+    "nostr-tools": "^1.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.0.1",
@@ -90,7 +92,6 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.6",
     "three": "^0.171.0",
-    "tiny-secp256k1": "^2.2.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
