--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@noble/hashes": "^1.6.1",
     "@noble/secp256k1": "^2.1.0",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "7.1.3",
     "@react-navigation/native": "7.0.13",
     "@react-navigation/native-stack": "7.1.14",
@@ -61,6 +62,7 @@
     "expo": "~52.0.14",
     "expo-application": "~6.0.1",
     "expo-av": "~15.0.1",
+    "expo-battery": "~9.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-clipboard": "~7.0.0",
     "expo-crypto": "~14.0.1",
@@ -83,6 +85,7 @@
     "react-dom": "18.3.1",
     "react-i18next": "^15.0.1",
     "react-native": "0.76.3",
+    "react-native-device-info": "14.0.1",
     "react-native-drawer-layout": "4.0.0-alpha.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-controller": "^1.12.7",
