--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "expo-updates": "~0.26.9",
     "i18next": "^23.14.0",
     "intl-pluralrules": "^2.0.1",
+    "lz-string": "^1.5.0",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
@@ -85,6 +86,7 @@
     "react-dom": "18.3.1",
     "react-i18next": "^15.0.1",
     "react-native": "0.76.3",
+    "react-native-background-fetch": "^4.2.6",
     "react-native-device-info": "14.0.1",
     "react-native-drawer-layout": "4.0.0-alpha.9",
     "react-native-gesture-handler": "~2.20.2",
