--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "expo-battery": "~9.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-clipboard": "~7.0.0",
+    "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
     "expo-dev-client": "~5.0.5",
     "expo-font": "~13.0.1",
