--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
-    "nostr-tools": "^1.13.0",
+    "nostr-tools": "1.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.0.1",
