--- a/app.json
+++ b/app.json
@@ -60,6 +60,7 @@
     "plugins": [
       "expo-localization",
       "expo-font",
+      "expo-secure-store",
       [
         "expo-av",
         {
