--- a/package.json
+++ b/package.json
@@ -52,9 +52,11 @@
     "@react-navigation/native-stack": "7.1.14",
     "@scure/base": "^1.1.1",
     "@shopify/flash-list": "1.7.1",
+    "@tanstack/react-query": "^4.29.19",
     "ai": "4.0.11",
     "any-sqlite": "1.0.4",
     "apisauce": "3.0.1",
+    "assert": "^1.1.1",
     "bech32": "^2.0.0",
     "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
@@ -73,6 +75,7 @@
     "expo-gl": "~15.0.2",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
+    "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.5",
