--- a/app.json
+++ b/app.json
@@ -46,6 +46,9 @@
         "tabletImage": "./assets/images/splash-logo-ios-tablet.png",
         "resizeMode": "contain",
         "backgroundColor": "#191015"
+      },
+      "config": {
+        "usesNonExemptEncryption": false
       }
     },
     "web": {
