--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "apisauce": "3.0.1",
     "assert": "^1.1.1",
     "bech32": "^2.0.0",
+    "better-sqlite3": "8.4.0",
     "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
     "buffer": "6.0.3",
