--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "t": "tsc --noEmit",
     "doctor": "npx expo-doctor"
   },
+  "any-sqlite": {
+    "driver": "react-native-quick-sqlite"
+  },
   "dependencies": {
     "@ai-sdk/react": "1.0.4",
     "@breeztech/react-native-breez-sdk-liquid": "0.5.1",
@@ -99,6 +102,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-controller": "^1.12.7",
     "react-native-mmkv": "3.1.0",
+    "react-native-quick-sqlite": "8.0.4",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
