--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
     "expo-dev-client": "~5.0.5",
+    "expo-file-system": "~18.0.5",
     "expo-font": "~13.0.1",
     "expo-gl": "~15.0.2",
     "expo-linking": "~7.0.3",
