Add NIP-90 demo (#21)
* feed screen doc

* transcriptions to other repo

* Create file app/components/FeedCard.tsx

* Create file app/components/Feed.tsx

* Add Feed and FeedEvent imports and event handler to HomeScreen.

* Add exports for new components Feed and FeedCard to index.ts

* Refactor HomeScreen to improve event handling clarity and navigation logic.

* Refactor Feed.tsx to remove duplicate import statements.

* Refactor HomeScreen to use observer from mobx-react-lite for state management.

* Update feed.md: Redefine Feed screen with NIP89 and NIP90 integration, update UI theme, and detail new component structure.

* No changes detected in Feed.tsx; commit message unnecessary.

* No changes detected in FeedCard.tsx.

* Added `View` import in HomeScreen.tsx for UI enhancement.

* Added Text component import to Feed.tsx for UI enhancement.

* Refactor HomeScreen to use TypeScript for enhanced type safety and maintainability.

* Refactor Feed.tsx: Removed unused import of Text component and updated description in DUMMY_EVENTS.

* Refactor `FeedCard.tsx` for clarity; no changes in functionality or structure.

* Refactor HomeScreen to use TypeScript for better type safety and maintainability.

* shh

* derive nostr keys moved into class

* shh

* pool and fix error

* swap ArcadeIdentity to NostrIdentity

* hm

* fix type errors and rename ArcadeDb to NostrDb

* fix pool type error

* expo secure store plugin

* pull in rest of arclib

* and profile

* profile

* social dono

* damus relay for now

* implicitany shh

* connected to relay

* Create file app/services/nostr/README.md

* Updated README.md to correct and clarify the description of Nostr service implementations in the Onyx app.

* No changes were made to the README.md file.

* No content changes detected in README.md for Nostr Services documentation.

* Update README.md to clarify the scope of Nostr services in the Onyx app 

--- a/app.json
+++ b/app.json
@@ -46,6 +46,9 @@
         "tabletImage": "./assets/images/splash-logo-ios-tablet.png",
         "resizeMode": "contain",
         "backgroundColor": "#191015"
+      },
+      "config": {
+        "usesNonExemptEncryption": false
       }
     },
     "web": {
@@ -60,6 +63,7 @@
     "plugins": [
       "expo-localization",
       "expo-font",
+      "expo-secure-store",
       [
         "expo-av",
         {
