--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@noble/curves": "^1.7.0",
     "@noble/hashes": "^1.6.1",
     "@noble/secp256k1": "^2.1.0",
+    "@op-engineering/op-sqlite": "^11.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "7.1.3",
@@ -52,8 +53,10 @@
     "@react-navigation/native-stack": "7.1.14",
     "@scure/base": "^1.1.1",
     "@shopify/flash-list": "1.7.1",
+    "@tanstack/react-query": "^4.29.19",
     "ai": "4.0.11",
     "apisauce": "3.0.1",
+    "assert": "^1.1.1",
     "bech32": "^2.0.0",
     "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
@@ -68,10 +71,12 @@
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
     "expo-dev-client": "~5.0.5",
+    "expo-file-system": "~18.0.5",
     "expo-font": "~13.0.1",
     "expo-gl": "~15.0.2",
     "expo-linking": "~7.0.3",
     "expo-localization": "~16.0.0",
+    "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.5",
@@ -82,7 +87,7 @@
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
     "mobx-state-tree": "5.3.0",
-    "nostr-tools": "^1.13.0",
+    "nostr-tools": "1.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.0.1",
