expo sqlite config

--- a/app.json
+++ b/app.json
@@ -64,6 +64,7 @@
       "expo-localization",
       "expo-font",
       "expo-secure-store",
+      "expo-sqlite",
       [
         "expo-av",
         {
