--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "expo-localization": "~16.0.0",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.13",
+    "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.5",
     "expo-updates": "~0.26.9",
