--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "submit:ios": "eas submit -p ios",
     "update:prod": "eas update --channel production --message",
     "t": "tsc --noEmit",
-    "doctor": "npx expo-doctor"
+    "doctor": "npx expo-doctor",
+    "gen:screen": "npx ignite-cli generate screen"
   },
   "dependencies": {
     "@ai-sdk/react": "1.0.4",
