--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "update:prod": "eas update --channel production --message",
     "t": "tsc --noEmit",
     "doctor": "npx expo-doctor",
-    "gen:screen": "npx ignite-cli generate screen"
+    "gen:screen": "npx ignite-cli generate screen $1"
   },
   "dependencies": {
     "@ai-sdk/react": "1.0.4",
