Updated `package.json` to streamline ADB port reversals for improved device connectivity during development.

--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "bundle:visualize": "npx react-native-bundle-visualizer",
     "bundle:visualize:dev": "npx react-native-bundle-visualizer --dev",
     "build": "yarn build:ios:prod",
-    "build:local": "eas build --profile production --platform ios --local",
-    "build:ios:sim": "eas build --profile development --platform ios --local",
-    "build:ios:dev": "eas build --profile development:device --platform ios --local",
-    "build:ios:prod": "eas build --profile production --platform ios",
-    "build:android:sim": "eas build --profile development --platform android --local",
-    "build:android:dev": "eas build --profile development:device --platform android --local",
-    "build:android:prod": "eas build --profile production --platform android --local",
+    "build:local": "eas build --profile production --platform ios --local --environment production",
+    "build:ios:sim": "eas build --profile development --platform ios --local --environment development",
+    "build:ios:dev": "eas build --profile development:device --platform ios --local --environment development",
+    "build:ios:prod": "eas build --profile production --platform ios --environment production",
+    "build:android:sim": "eas build --profile development --platform android --local --environment development",
+    "build:android:dev": "eas build --profile development:device --platform android --local --environment development",
+    "build:android:prod": "eas build --profile production --platform android --local --environment production",
     "start": "npx expo start",
     "android": "npx expo run:android",
     "ios": "npx expo run:ios",
