--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "serve:web": "npx server dist",
     "prebuild:clean": "npx expo prebuild --clean",
     "submit:ios": "eas submit -p ios",
-    "update:prod": "eas update --channel production --message",
+    "update:prod": "eas update --channel production --environment production --message",
     "t": "tsc --noEmit",
-    "doctor": "npx expo-doctor"
+    "doctor": "npx expo-doctor",
+    "gen:screen": "npx ignite-cli generate screen $1"
   },
   "dependencies": {
     "@ai-sdk/react": "1.0.4",
@@ -45,8 +46,8 @@
     "@noble/curves": "^1.7.0",
     "@noble/hashes": "^1.6.1",
     "@noble/secp256k1": "^2.1.0",
-    "@op-engineering/op-sqlite": "^11.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "7.1.3",
     "@react-navigation/native": "7.0.13",
@@ -78,6 +79,7 @@
     "expo-localization": "~16.0.0",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.13",
+    "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.5",
     "expo-updates": "~0.26.9",
@@ -91,7 +93,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.0.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.5",
     "react-native-background-fetch": "^4.2.6",
     "react-native-device-info": "14.0.1",
     "react-native-drawer-layout": "4.0.0-alpha.9",
