--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "expo-updates": "~0.26.9",
     "i18next": "^23.14.0",
     "intl-pluralrules": "^2.0.1",
+    "llama.rn": "^0.4.3",
     "lz-string": "^1.5.0",
     "mobx": "6.10.2",
     "mobx-react-lite": "4.0.5",
