--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@expo-google-fonts/jetbrains-mono": "0.2.3",
     "@expo-google-fonts/space-grotesk": "0.2.3",
     "@expo/metro-runtime": "~4.0.0",
+    "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@noble/curves": "^1.7.0",
     "@noble/hashes": "^1.6.1",
     "@noble/secp256k1": "^2.1.0",
@@ -85,6 +86,7 @@
     "expo-updates": "~0.26.9",
     "i18next": "^23.14.0",
     "intl-pluralrules": "^2.0.1",
+    "json5": "^2.2.3",
     "llama.rn": "^0.4.3",
     "lz-string": "^1.5.0",
     "mobx": "6.10.2",
@@ -96,7 +98,9 @@
     "react-i18next": "^15.0.1",
     "react-native": "0.76.5",
     "react-native-background-fetch": "^4.2.6",
+    "react-native-blob-util": "^0.19.1",
     "react-native-device-info": "14.0.1",
+    "react-native-document-picker": "^9.0.1",
     "react-native-drawer-layout": "4.0.0-alpha.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-controller": "^1.12.7",
