eas arch disable test

--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,10 @@
       },
       "ios": {
         "buildConfiguration": "Debug",
-        "simulator": true
+        "simulator": true,
+        "env": {
+          "RCT_NEW_ARCH_ENABLED": "0"
+        }
       },
       "env": {
         "ENVIRONMENT": "development"
