--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
       "fallbackToCacheTimeout": 0,
       "url": "https://u.expo.dev/69b52e85-13c8-439b-be19-8d2580e481fc"
     },
-    "newArchEnabled": false,
+    "newArchEnabled": true,
     "jsEngine": "hermes",
     "assetBundlePatterns": [
       "**/*"
@@ -41,12 +41,6 @@
       "icon": "./assets/images/app-icon-all.png",
       "supportsTablet": true,
       "bundleIdentifier": "com.openagents.onyx",
-      "splash": {
-        "image": "./assets/images/splash-logo-ios-mobile.png",
-        "tabletImage": "./assets/images/splash-logo-ios-tablet.png",
-        "resizeMode": "contain",
-        "backgroundColor": "#191015"
-      },
       "config": {
         "usesNonExemptEncryption": false
       }
@@ -67,6 +61,15 @@
         "expo-av",
         {
           "microphonePermission": "Allow Onyx to access your microphone for voice recording."
+        }
+      ],
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/images/splash-icon.png",
+          "imageWidth": 200,
+          "resizeMode": "contain",
+          "backgroundColor": "#000000"
         }
       ]
     ],
