--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
     "build": "yarn build:ios:prod",
     "build:ios:prod": "eas build --profile production --platform ios",
-    "prebuild:clean": "npx expo prebuild --clean",
+    "prebuild:clean": "npx expo prebuild --clean --platform ios",
     "submit:ios": "eas submit -p ios",
     "update:prod": "eas update --channel production --environment production --message",
     "t": "tsc --noEmit",
