--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.0.8",
+    "@ai-sdk/react": "^1.0.6",
     "@expo-google-fonts/jetbrains-mono": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "ai": "^4.0.20",
     "expo": "~52.0.19",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
@@ -49,7 +52,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
