--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onyx",
-  "main": "expo-router/entry",
+  "main": "./index.js",
   "version": "1.0.0",
   "license": "AGPL-3.0-only",
   "scripts": {
@@ -28,6 +28,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native-stack": "^7.0.0",
     "expo": "~52.0.19",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~15.0.1",
@@ -36,7 +37,6 @@
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.13",
     "expo-secure-store": "~14.0.0",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
