Update main entry point in package.json from './index.js' to 'src/app.tsx' to reflect new project structure.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onyx",
-  "main": "./index.js",
+  "main": "src/app.tsx",
   "version": "1.0.0",
   "license": "AGPL-3.0-only",
   "scripts": {
