--- a/app.json
+++ b/app.json
@@ -7,6 +7,7 @@
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
     "icon": "./assets/images/app-icon-all.png",
+    "backgroundColor": "#000000",
     "splash": {
       "image": "./assets/images/splash-logo-all.png",
       "resizeMode": "contain",
