--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
+    "@scure/base": "^1.1.1",
+    "bech32": "^2.0.0",
+    "bip32": "^5.0.0-rc.0",
+    "bip39": "3.1.0",
     "expo": "~52.0.19",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~15.0.1",
@@ -46,6 +50,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "nostr-tools": "1.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
