--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-crypto": "~14.0.1",
     "expo-font": "~13.0.1",
     "expo-gl": "~15.0.2",
     "expo-haptics": "~14.0.0",
