--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "text-encoding-polyfill": "^0.6.7",
     "three": "^0.171.0",
     "zustand": "^5.0.2"
   },
