--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "llama.rn": "^0.4.3",
     "nostr-tools": "1.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
