Add `fix-llama-imports` script and integrate with iOS build in `package.json`.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "ios": "expo run:ios",
+    "fix-llama-imports": "node ./scripts/fix-llama-imports.js",
+    "ios": "expo run:ios && yarn fix-llama-imports",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
