Updated the 'ios' script in package.json to include prebuild steps and Podfile modifications for enhanced iOS build configuration.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "fix-llama-imports": "node ./scripts/fix-llama-imports.js",
-    "ios": "expo run:ios && yarn fix-llama-imports",
+    "ios": "npx expo prebuild --platform ios && node ./scripts/modify-podfile.js && cd ios && pod install && npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
