Added `fix-llama` script and integrated it into the `ios` build process to patch RNLlamaSpec issues.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "ios": "npx expo prebuild --platform ios && node ./scripts/modify-podfile.js && cd ios && pod install && npx expo run:ios",
+    "fix-llama": "patch ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h < patches/RNLlamaSpec.patch",
+    "ios": "npx expo prebuild --platform ios && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
