--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "fix-llama": "node ./scripts/fix-llama.js",
-    "ios": "npx expo prebuild --platform ios && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
+    "ios": "npx expo prebuild --platform ios && cd ios && pod install && cd .. && node ./scripts/fix-llama.js && npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
