Update `fix-llama` script in `package.json` to use `patch` command and modify `ios` script to invoke `yarn fix-llama`.

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "fix-llama": "node ./scripts/fix-llama.js",
-    "ios": "npx expo prebuild --platform ios && cd ios && pod install && cd .. && node ./scripts/fix-llama.js && npx expo run:ios",
+    "fix-llama": "patch -N -r - ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h patches/RNLlamaSpec.patch || true",
+    "ios": "npx expo prebuild --platform ios && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
