--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "fix-llama": "patch -N -r - ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h patches/RNLlamaSpec.patch || true",
+    "fix-llama": "patch ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h patches/RNLlamaSpec.patch",
     "ios": "npx expo prebuild --platform ios && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
