Add clean local Llama3.2 3B chat (#36)
* 148 transcript

* show canvas

* router above canvas

* hmm

* hide canvas again on emulator

* move in chat - and yarn add llama.rn

* move chat stuff in

* Create file scripts/fix-llama-imports.js

* Add `fix-llama-imports` script and integrate with iOS build in `package.json`.

* Create file scripts/modify-podfile.js

* Updated the 'ios' script in package.json to include prebuild steps and Podfile modifications for enhanced iOS build configuration.

* Refactor modify-podfile.js to rename function and enhance Podfile modification logic by removing existing post_install blocks.

* Refactor `modify-podfile.js` to target specific 'Onyx' block instead of removing post_install blocks.

* Create file patches/RNLlamaSpec.patch

* Added `fix-llama` script and integrated it into the `ios` build process to patch RNLlamaSpec issues.

* Create file scripts/fix-llama.js

* Update `fix-llama` script in `package.json` to use a new JavaScript file instead of a patch file.

* Delete patches/RNLlamaSpec.patch

* Update iOS script in `package.json` to use direct script path for `fix-llama`.

* Create file patches/RNLlamaSpec.patch

* Update `fix-llama` script in `package.json` to use `patch` command and modify `ios` script to invoke `yarn fix-llama`.

* Update RNLlamaSpec.h to use local import for RCTTurboModule to resolve dependency issues.

* Refactor fix-llama script for simplicity in package.json and add test script.

* sed to the rescue

* full width

* yarn remove expo-app-loading

* chat model load

* llama loads

* hello

* load fonts

* theme

* color nice

---------

Co-authored-by: GitHub API <noreply@github.com>

--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
   "name": "onyx",
   "main": "src/app.tsx",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "license": "AGPL-3.0-only",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "ios": "expo run:ios",
+    "fix-llama": "sed -i '' 's|#import <ReactCommon/RCTTurboModule.h>|#import \"RCTTurboModule.h\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h",
+    "fix-llama:linux": "sed -i.bak 's|#import <ReactCommon/RCTTurboModule.h>|#import \"RCTTurboModule.h\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h && rm ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h.bak",
+    "ios": "npx expo prebuild --platform ios && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
     "build": "yarn build:ios:prod",
+    "build:ios:dev": "eas build --profile development:device --platform ios --local",
     "build:ios:prod": "eas build --profile production --platform ios",
     "prebuild:clean": "npx expo prebuild --clean --platform ios",
     "submit:ios": "eas submit -p ios",
     "t": "tsc --noEmit",
     "doctor": "npx expo-doctor",
-    "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy"
+    "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy",
+    "eas-build-pre-install": "echo 'Running pre-install hook...'",
+    "eas-build-post-install": "echo 'Running post-install hook...' && yarn fix-llama:linux",
+    "eas-build-on-success": "echo 'Build succeeded!'",
+    "eas-build-on-error": "echo 'Build failed!'",
+    "eas-build-on-complete": "echo 'Build completed!'",
+    "eas-build-on-cancel": "echo 'Build was canceled!'"
   },
   "jest": {
     "preset": "jest-expo"
@@ -27,7 +36,9 @@
     "@expo-google-fonts/jetbrains-mono": "^0.2.3",
     "@expo/metro-runtime": "~4.0.0",
     "@expo/vector-icons": "^14.0.2",
+    "@flyerhq/react-native-chat-ui": "^1.4.3",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-clipboard/clipboard": "^1.15.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
     "@react-navigation/native-stack": "^7.0.0",
@@ -37,7 +48,6 @@
     "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
     "expo": "~52.0.19",
-    "expo-app-loading": "^2.1.1",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
@@ -52,10 +62,13 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
+    "llama.rn": "^0.4.3",
     "nostr-tools": "1.13.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
+    "react-native-blob-util": "^0.21.2",
+    "react-native-document-picker": "^9.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
