--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build": "yarn build:ios:prod",
     "build:ios:dev": "eas build --profile development:device --platform ios --local",
     "build:ios:prod": "eas build --profile production --platform ios",
+    "build:android:prod": "eas build --profile production --platform android",
     "prebuild:clean": "npx expo prebuild --clean --platform ios",
     "submit:ios": "eas submit -p ios",
     "t": "tsc --noEmit",
