No changes detected in eas.json file; commit unnecessary.

--- a/eas.json
+++ b/eas.json
@@ -61,6 +61,12 @@
         "ENVIRONMENT": "production"
       },
       "environment": "production"
+    },
+    "production-apk": {
+      "extends": "production",
+      "android": {
+        "buildType": "apk"
+      }
     }
   },
   "submit": {
