--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "android": "expo run:android",
     "fix-llama": "sed -i '' 's|#import <ReactCommon/RCTTurboModule.h>|#import \"RCTTurboModule.h\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h",
     "fix-llama:linux": "sed -i.bak 's|#import <ReactCommon/RCTTurboModule.h>|#import \"RCTTurboModule.h\"|' ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h && rm ios/build/generated/ios/RNLlamaSpec/RNLlamaSpec.h.bak",
-    "ios": "npx expo prebuild --platform ios && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
+    "ios": "npx expo prebuild --platform ios --clean && cd ios && pod install && cd .. && yarn fix-llama && npx expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
     "build": "yarn build:ios:prod",
     "build:ios:dev": "eas build --profile development:device --platform ios --local",
     "build:ios:prod": "eas build --profile production --platform ios",
+    "build:android:prod": "eas build --profile production --platform android",
+    "build:android:apk": "eas build --profile production-apk --platform android",
     "prebuild:clean": "npx expo prebuild --clean --platform ios",
     "submit:ios": "eas submit -p ios",
     "t": "tsc --noEmit",
     "doctor": "npx expo-doctor",
     "copyrepo": "cd ~/code && node md.js ./onyx && cat combined.md | pbcopy",
     "eas-build-pre-install": "echo 'Running pre-install hook...'",
-    "eas-build-post-install": "echo 'Running post-install hook...' && yarn fix-llama:linux",
+    "eas-build-post-install": "if [ \"$EAS_BUILD_PLATFORM\" = \"ios\" ]; then echo 'Running post-install hook for iOS...' && yarn fix-llama:linux; else echo 'Skipping post-install hook for non-iOS platform'; fi",
     "eas-build-on-success": "echo 'Build succeeded!'",
     "eas-build-on-error": "echo 'Build failed!'",
     "eas-build-on-complete": "echo 'Build completed!'",
@@ -47,12 +49,12 @@
     "bech32": "^2.0.0",
     "bip32": "^5.0.0-rc.0",
     "bip39": "3.1.0",
-    "expo": "~52.0.19",
+    "expo": "~52.0.20",
     "expo-av": "~15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
     "expo-crypto": "~14.0.1",
-    "expo-font": "~13.0.1",
+    "expo-font": "~13.0.2",
     "expo-gl": "~15.0.2",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.3",
